# aws-cheatsheets-web

./: .gitignore  Makefile  pyproject.toml
crewai_ai_content_aws/: .gitignore  README.md  aws_arq.html  crewai_flow.html  pyproject.toml
crewai_ai_content_aws/archive/: .gitignore  README.md  aws_arq.html  pyproject.toml  training_data.pkl
crewai_ai_content_aws/archive/crewai_ai_content_aws/: crew.py
crewai_ai_content_aws/archive/crewai_ai_content_aws/config/: agents.yaml  tasks.yaml
crewai_ai_content_aws/src/flow_aws_arquitecture/: main.py
crewai_ai_content_aws/src/flow_aws_arquitecture/crews/crewai_ai_content_aws/: README.md  pyproject.toml
crewai_ai_content_aws/src/flow_aws_arquitecture/crews/crewai_ai_content_aws/src/crewai_ai_content_aws/: crew.py  main.py
crewai_ai_content_aws/src/flow_aws_arquitecture/crews/crewai_ai_content_aws/src/crewai_ai_content_aws/config/: agents.yaml  tasks.yaml
templates/pubs/: aws-07_Arquitectura-Cloud-para-deteccion-de-defectos-en-productos-con-vision-computacional.html  aws-08_Plataforma-analitica-en-la-nube-para-datos-de-medidores-en-tiempo-real.html  aws-09_Hub-de-inteligencia-industrial-en-AWS-para-optimizar-operaciones.html  aws-10_Edge-como-solucion-en-industria-4.0-con-Siemens-y-AWS.html  aws-10_Edge-computing-como-solucion-en-industria-4punto0-con-Siemens-y-AWS.html  aws-11_Arquitectura-Cloud-para-gestionar-productos-con-Siemens-Teamcenter.html  aws-12_Gestion-de-estaciones-de-carga-para-vehiculos-electricos-en-AWS.html
